--- a/.github/workflows/JDCloud-AX1800PRO-uboot.yml
+++ b/.github/workflows/JDCloud-AX1800PRO-uboot.yml
@@ -46,6 +46,7 @@ jobs:
         sudo -E apt-get -qq install gcc-aarch64-linux-gnu
         export CROSS_COMPILE=aarch64-linux-gnu-
         ##-------------------------
+        sudo -E apt-get -qq install device-tree-compiler
         sudo -E apt-get -qq autoremove --purge
         sudo -E apt-get -qq clean
         sudo timedatectl set-timezone "$TZ"
