--- a/.github/workflows/JDCloud-AX1800PRO-uboot.yml
+++ b/.github/workflows/JDCloud-AX1800PRO-uboot.yml
@@ -98,7 +98,7 @@ jobs:
       uses: actions/upload-artifact@main
       if: steps.organize.outputs.status == 'success' && !cancelled()
       with:
-        name: ${{ env.FILE_DATE }}-${{ env.OPENWRT_NAME }}-${{ env.DEVICE_NAME }}
+        name: ${{ env.DEVICE_NAME }}
         path: ${{ env.FIRMWARE }}
 
     - name: 生成release标签
