--- a/.github/workflows/Build_vb1980_kernel4.4_Padavan.yml
+++ b/.github/workflows/Build_vb1980_kernel4.4_Padavan.yml
@@ -212,8 +212,7 @@ jobs:
     - name: Build firmware
       run: |
         cd $WORK_PATH/trunk
-        sudo ./clear_tree
-        sudo ./build_firmware_modify ${{ github.event.inputs.target }} 0
+        sudo make ${{ github.event.inputs.target }} 0
         echo "FIRMWARE_DATEPREFIX=$(date +"%Y%m%d")" >> $GITHUB_ENV
         
     - name: Organize firmware files
