--- a/.github/workflows/Build_vb1980_kernel4.4_Padavan.yml
+++ b/.github/workflows/Build_vb1980_kernel4.4_Padavan.yml
@@ -288,14 +288,14 @@ jobs:
         sed -i '/cp -f/d' Makefile
     - name: Extract toolchain
       run: |
-        cp -f toolchain/mipsel-linux-uclibc-gcc10.tar.xz $WORK_PATH
+        cp -f padavan/toolchain/mipsel-linux-uclibc-gcc10.tar.xz $WORK_PATH
         cd $WORK_PATH
         mkdir -p toolchain-mipsel/toolchain-4.4.x
         tar -Jxvf mipsel-linux-uclibc-gcc10.tar.xz -C toolchain-mipsel/toolchain-4.4.x
     - name: Apply rainbow themes
       if: github.event.inputs.rainbowui == 'true'
       run: |
-        #cp -f formlogin/httpd.c $WORK_PATH/trunk/user/httpd
+        #cp -f padavan/formlogin/httpd.c $WORK_PATH/trunk/user/httpd
         cd $WORK_PATH/trunk/user/httpd
         git apply formlogin.patch
         cd $WORK_PATH/trunk/user/www
