--- a/.github/workflows/Build_MeIsReallyBy_kernel4.4_Padavan.yml
+++ b/.github/workflows/Build_MeIsReallyBy_kernel4.4_Padavan.yml
@@ -196,6 +196,10 @@ jobs:
         #格式如下：
         #sed -i '/自定义项/d' .config
         #echo "自定义项=y" >> .config
+        sed -i '/CONFIG_FIRMWARE_INCLUDE_SMBD/d' .config #删除SAMBA配置
+        echo "CONFIG_FIRMWARE_INCLUDE_SMBD=y" >> .config #添加SAMBA
+        sed -i '/CONFIG_FIRMWARE_INCLUDE_AUDIO/d' .config
+        echo "CONFIG_FIRMWARE_INCLUDE_AUDIO=y" >> .config
         sed -i "s/FIRMWARE_BUILDS_REV=.*/FIRMWARE_BUILDS_REV=${{ github.event.inputs.firmwarever }}/g" ./versions.inc
         echo '更新版本号时间'
         #########################################################################################
