--- a/.github/workflows/Build_JiaY-shi_openwrt.yml
+++ b/.github/workflows/Build_JiaY-shi_openwrt.yml
@@ -65,8 +65,8 @@ on:
   #   types: [started]                  # 点击 star 之后
   
 env:
-  REPO_URL: https://github.com/Lienol/openwrt
-  REPO_BRANCH: 21.02
+  REPO_URL: https://github.com/JiaY-shi/openwrt
+  REPO_BRANCH: ipq60xx-devel_nss
   FEEDS_CONF: feeds.conf.default
   CONFIG_FILE: config/Lienol_${{ github.event.inputs.model }}.config
   DIY_P1_SH: diy-part1.sh
