--- a/.github/workflows/Build_JiaY-shi_openwrt.yml
+++ b/.github/workflows/Build_JiaY-shi_openwrt.yml
@@ -68,7 +68,7 @@ env:
   REPO_URL: https://github.com/JiaY-shi/openwrt
   REPO_BRANCH: ipq60xx-devel_nss
   FEEDS_CONF: feeds.conf.default
-  CONFIG_FILE: config/Lienol_${{ github.event.inputs.model }}.config
+  CONFIG_FILE: config/${{ github.event.inputs.model }}.config
   DIY_P1_SH: diy-part1.sh
   DIY_P2_SH: diy-part3.sh
 #  UPLOAD_BIN_DIR: true
